# graphchem

./: .gitignore  LICENSE  MANIFEST.in  README.md  azure-pipelines.yml  mkdocs.yml  pyproject.toml  setup.py
.github/workflows/: publish_to_pypi.yml  run_tests.yml
chemgraph/: mols.csv
docs/: api_data.md  api_datasets.md  api_models.md  api_nn.md  api_operator.md  api_preprocessing.md  index.md  requirements.txt
docs/api_data/: moleculedataset.md  moleculegraph.md
docs/api_datasets/: load_cn.md  load_lhv.md  load_mon.md  load_ron.md  load_ysi.md
docs/api_nn/: moleculegcn.md
docs/api_preprocessing/: atom_to_str.md  bond_to_str.md  get_ring_size.md  load_encoder.md  moleculeencoder.md  tokenizer.md
examples/: model.enc  model.pt  model_cn.pt  model_mon.enc  model_mon.pt  model_ron.enc  model_ron.pt  predict_bp.ipynb  predict_cn.ipynb  predict_cp.ipynb  predict_kv.ipynb  predict_lhv.ipynb  predict_mon.ipynb  predict_pp.ipynb  predict_ron.ipynb  predict_ysi.ipynb  schweidtmann_test.csv
examples/comparison/: schweidtmann_train.csv  train_cn.ipynb  train_mon.ipynb  train_ron.ipynb
graphchem/: __init__.py  atom.py  atom_features.py  gnn.py  graph.py  map.py  model.py  molecule.py  operator.py  server.py  test_all_mols.py  version.py
graphchem/chem/: __init__.py  atom.py  molecule.py
graphchem/data/: __init__.py  structs.py
graphchem/datasets/: __init__.py  get_set.py  sets.py
graphchem/models/: mp.py  (+6 more)
tests/: mols.csv  test.py  test_all.py  test_all_mols.py  test_features.py  test_gcn.py  test_graph_mapper.py  test_sets.py  test_structs.py  test_train.py
(+18 files in other folders)
